// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dialog> Snapshots and structure should render story DialogWithFocusableElements 1`] = `
<Fragment>
  <Button
    emphasis="high"
    onClick={[Function]}
    size="m"
    theme="light"
  >
    Open dialog
  </Button>
  <Dialog
    focusElement={
      Object {
        "current": null,
      }
    }
    isOpen={true}
    onClose={[Function]}
    parentElement={
      Object {
        "current": undefined,
      }
    }
    size="big"
  >
    <header>
      <Toolbar
        after={
          <IconButton
            emphasis="low"
            icon="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
            label="Close"
            onClick={[Function]}
            size="m"
            theme="light"
          />
        }
        label={
          <span
            className="lumx-typography-title"
          >
            Dialog header
          </span>
        }
      />
    </header>
    <div
      className="lumx-spacing-padding-horizontal-huge lumx-spacing-padding-bottom-huge"
    >
      <div
        className="lumx-spacing-margin-bottom-huge"
      >
        The text field should capture the focus on open and a focus trap should be in place.
      </div>
      <TextField
        className="lumx-spacing-margin-bottom-huge"
        inputRef={
          Object {
            "current": null,
          }
        }
        label="Text input"
        maxLength={10}
        onChange={[Function]}
        theme="light"
        type="text"
        value="value"
      />
      <Checkbox
        className="lumx-spacing-margin-bottom-huge"
        isChecked={false}
        label="Checkbox input"
        onChange={[Function]}
        theme="light"
      />
      <FlexBox
        orientation="horizontal"
      >
        <DatePickerField
          label="Start date"
          locale="fr"
          nextButtonProps={
            Object {
              "label": "Next month",
            }
          }
          onChange={[Function]}
          placeholder="Pick a date"
          previousButtonProps={
            Object {
              "label": "Previous month",
            }
          }
          value={2020-05-18T00:00:00.000Z}
        />
        <Select
          className="lumx-spacing-margin-left-huge"
          isOpen={false}
          label="Select label"
          onDropdownClose={[Function]}
          onInputClick={[Function]}
          selectedValueRender={[Function]}
          value="First item"
        >
          <List
            isClickable={true}
          >
            <ListItem
              isSelected={true}
              key="First item"
              onItemSelected={[Function]}
              size="tiny"
            >
              First item
            </ListItem>
            <ListItem
              isSelected={false}
              key="Second item"
              onItemSelected={[Function]}
              size="tiny"
            >
              Second item
            </ListItem>
            <ListItem
              isSelected={false}
              key="Third item"
              onItemSelected={[Function]}
              size="tiny"
            >
              Third item
            </ListItem>
          </List>
        </Select>
      </FlexBox>
      <div
        tabIndex={0}
      >
        Focus div
      </div>
    </div>
  </Dialog>
</Fragment>
`;

exports[`<Dialog> Snapshots and structure should render story DialogWithHeaderFooterAndDivider 1`] = `
<Fragment>
  <Button
    emphasis="high"
    onClick={[Function]}
    size="m"
    theme="light"
  >
    Open dialog
  </Button>
  <Dialog
    forceFooterDivider={true}
    forceHeaderDivider={true}
    isOpen={true}
    onClose={[Function]}
    parentElement={
      Object {
        "current": undefined,
      }
    }
    size="big"
  >
    <header
      className="lumx-spacing-padding lumx-typography-title"
    >
      Dialog header
    </header>
    <div
      className="lumx-spacing-padding"
    >
      
Nihil hic munitissimus habendi senatus locus, nihil horum? At nos hinc posthac, sitientis piros
Afros. Magna pars studiorum, prodita quaerimus. Integer legentibus erat a ante historiarum
dapibus. Praeterea iter est quasdam res quas ex communi. Ullamco laboris nisi ut aliquid ex ea
commodi consequat. Inmensae subtilitatis, obscuris et malesuada fames. Me non paenitet nullum
festiviorem excogitasse ad hoc. Cum ceteris in veneratione tui montes, nascetur mus. Etiam
habebis sem dicantur magna mollis euismod. Quis aute iure reprehenderit in voluptate velit esse.
Phasellus laoreet lorem vel dolor tempus vehicula. Ambitioni dedisse scripsisse iudicaretur.
Paullum deliquit, ponderibus modulisque suis ratio utitur. Ab illo tempore, ab est sed
immemorabili. Nec dubitamus multa iter quae et nos invenerat. Tu quoque, Brute, fili mi, nihil
timor populi, nihil! Morbi fringilla convallis sapien, id pulvinar odio volutpat. Cras mattis
iudicium purus sit amet fermentum. Vivamus sagittis lacus vel augue laoreet rutrum faucibus.
Quisque ut dolor gravida, placerat libero vel, euismod. Unam incolunt Belgae, aliam Aquitani,
tertiam. Cras mattis iudicium purus sit amet fermentum
    </div>
    <footer
      className="lumx-spacing-padding"
    >
      Dialog footer
    </footer>
  </Dialog>
</Fragment>
`;

exports[`<Dialog> Snapshots and structure should render story DialogWithHeaderFooterChildren 1`] = `
<Fragment>
  <Button
    emphasis="high"
    onClick={[Function]}
    size="m"
    theme="light"
  >
    Open dialog
  </Button>
  <Dialog
    isOpen={true}
    onClose={[Function]}
    parentElement={
      Object {
        "current": undefined,
      }
    }
    size="big"
  >
    <header
      className="lumx-spacing-padding lumx-typography-title"
    >
      Dialog header
    </header>
    <div
      className="lumx-spacing-padding"
    >
      
Nihil hic munitissimus habendi senatus locus, nihil horum? At nos hinc posthac, sitientis piros
Afros. Magna pars studiorum, prodita quaerimus. Integer legentibus erat a ante historiarum
dapibus. Praeterea iter est quasdam res quas ex communi. Ullamco laboris nisi ut aliquid ex ea
commodi consequat. Inmensae subtilitatis, obscuris et malesuada fames. Me non paenitet nullum
festiviorem excogitasse ad hoc. Cum ceteris in veneratione tui montes, nascetur mus. Etiam
habebis sem dicantur magna mollis euismod. Quis aute iure reprehenderit in voluptate velit esse.
Phasellus laoreet lorem vel dolor tempus vehicula. Ambitioni dedisse scripsisse iudicaretur.
Paullum deliquit, ponderibus modulisque suis ratio utitur. Ab illo tempore, ab est sed
immemorabili. Nec dubitamus multa iter quae et nos invenerat. Tu quoque, Brute, fili mi, nihil
timor populi, nihil! Morbi fringilla convallis sapien, id pulvinar odio volutpat. Cras mattis
iudicium purus sit amet fermentum. Vivamus sagittis lacus vel augue laoreet rutrum faucibus.
Quisque ut dolor gravida, placerat libero vel, euismod. Unam incolunt Belgae, aliam Aquitani,
tertiam. Cras mattis iudicium purus sit amet fermentum
    </div>
    <footer
      className="lumx-spacing-padding"
    >
      Dialog footer
    </footer>
  </Dialog>
</Fragment>
`;

exports[`<Dialog> Snapshots and structure should render story DialogWithHeaderFooterProps 1`] = `
<Fragment>
  <Button
    emphasis="high"
    onClick={[Function]}
    size="m"
    theme="light"
  >
    Open dialog
  </Button>
  <Dialog
    footer="Footer prop"
    header="Header prop"
    isOpen={true}
    onClose={[Function]}
    parentElement={
      Object {
        "current": undefined,
      }
    }
    size="big"
  >
    <div
      className="lumx-spacing-padding"
    >
      
Nihil hic munitissimus habendi senatus locus, nihil horum? At nos hinc posthac, sitientis piros
Afros. Magna pars studiorum, prodita quaerimus. Integer legentibus erat a ante historiarum
dapibus. Praeterea iter est quasdam res quas ex communi. Ullamco laboris nisi ut aliquid ex ea
commodi consequat. Inmensae subtilitatis, obscuris et malesuada fames. Me non paenitet nullum
festiviorem excogitasse ad hoc. Cum ceteris in veneratione tui montes, nascetur mus. Etiam
habebis sem dicantur magna mollis euismod. Quis aute iure reprehenderit in voluptate velit esse.
Phasellus laoreet lorem vel dolor tempus vehicula. Ambitioni dedisse scripsisse iudicaretur.
Paullum deliquit, ponderibus modulisque suis ratio utitur. Ab illo tempore, ab est sed
immemorabili. Nec dubitamus multa iter quae et nos invenerat. Tu quoque, Brute, fili mi, nihil
timor populi, nihil! Morbi fringilla convallis sapien, id pulvinar odio volutpat. Cras mattis
iudicium purus sit amet fermentum. Vivamus sagittis lacus vel augue laoreet rutrum faucibus.
Quisque ut dolor gravida, placerat libero vel, euismod. Unam incolunt Belgae, aliam Aquitani,
tertiam. Cras mattis iudicium purus sit amet fermentum
    </div>
  </Dialog>
</Fragment>
`;

exports[`<Dialog> Snapshots and structure should render story DialogWithHeaderFooterPropsAndChildren 1`] = `
<Fragment>
  <Button
    emphasis="high"
    onClick={[Function]}
    size="m"
    theme="light"
  >
    Open dialog
  </Button>
  <Dialog
    footer=" Footer prop"
    header=" Header prop"
    isOpen={true}
    onClose={[Function]}
    parentElement={
      Object {
        "current": undefined,
      }
    }
    size="big"
  >
    <header
      className="lumx-spacing-padding lumx-typography-title"
    >
      Dialog header
    </header>
    <div
      className="lumx-spacing-padding"
    >
      
Nihil hic munitissimus habendi senatus locus, nihil horum? At nos hinc posthac, sitientis piros
Afros. Magna pars studiorum, prodita quaerimus. Integer legentibus erat a ante historiarum
dapibus. Praeterea iter est quasdam res quas ex communi. Ullamco laboris nisi ut aliquid ex ea
commodi consequat. Inmensae subtilitatis, obscuris et malesuada fames. Me non paenitet nullum
festiviorem excogitasse ad hoc. Cum ceteris in veneratione tui montes, nascetur mus. Etiam
habebis sem dicantur magna mollis euismod. Quis aute iure reprehenderit in voluptate velit esse.
Phasellus laoreet lorem vel dolor tempus vehicula. Ambitioni dedisse scripsisse iudicaretur.
Paullum deliquit, ponderibus modulisque suis ratio utitur. Ab illo tempore, ab est sed
immemorabili. Nec dubitamus multa iter quae et nos invenerat. Tu quoque, Brute, fili mi, nihil
timor populi, nihil! Morbi fringilla convallis sapien, id pulvinar odio volutpat. Cras mattis
iudicium purus sit amet fermentum. Vivamus sagittis lacus vel augue laoreet rutrum faucibus.
Quisque ut dolor gravida, placerat libero vel, euismod. Unam incolunt Belgae, aliam Aquitani,
tertiam. Cras mattis iudicium purus sit amet fermentum
    </div>
    <footer
      className="lumx-spacing-padding"
    >
      Dialog footer
    </footer>
  </Dialog>
</Fragment>
`;

exports[`<Dialog> Snapshots and structure should render story LoadingDialog 1`] = `
<Fragment>
  <Button
    emphasis="high"
    onClick={[Function]}
    size="m"
    theme="light"
  >
    Open dialog
  </Button>
  <Dialog
    isLoading={true}
    isOpen={true}
    onClose={[Function]}
    parentElement={
      Object {
        "current": undefined,
      }
    }
    size="big"
  >
    <div
      className="lumx-spacing-padding"
    >
      
Nihil hic munitissimus habendi senatus locus, nihil horum? At nos hinc posthac, sitientis piros
Afros. Magna pars studiorum, prodita quaerimus. Integer legentibus erat a ante historiarum
dapibus. Praeterea iter est quasdam res quas ex communi. Ullamco laboris nisi ut aliquid ex ea
commodi consequat. Inmensae subtilitatis, obscuris et malesuada fames. Me non paenitet nullum
festiviorem excogitasse ad hoc. Cum ceteris in veneratione tui montes, nascetur mus. Etiam
habebis sem dicantur magna mollis euismod. Quis aute iure reprehenderit in voluptate velit esse.
Phasellus laoreet lorem vel dolor tempus vehicula. Ambitioni dedisse scripsisse iudicaretur.
Paullum deliquit, ponderibus modulisque suis ratio utitur. Ab illo tempore, ab est sed
immemorabili. Nec dubitamus multa iter quae et nos invenerat. Tu quoque, Brute, fili mi, nihil
timor populi, nihil! Morbi fringilla convallis sapien, id pulvinar odio volutpat. Cras mattis
iudicium purus sit amet fermentum. Vivamus sagittis lacus vel augue laoreet rutrum faucibus.
Quisque ut dolor gravida, placerat libero vel, euismod. Unam incolunt Belgae, aliam Aquitani,
tertiam. Cras mattis iudicium purus sit amet fermentum
    </div>
  </Dialog>
</Fragment>
`;

exports[`<Dialog> Snapshots and structure should render story PreventDialogAutoClose 1`] = `
<Fragment>
  <Button
    emphasis="high"
    onClick={[Function]}
    size="m"
    theme="light"
  >
    Open dialog
  </Button>
  <Dialog
    isOpen={true}
    onClose={[Function]}
    parentElement={
      Object {
        "current": undefined,
      }
    }
    preventAutoClose={true}
    size="big"
  >
    <div
      className="lumx-spacing-padding"
    >
      
Nihil hic munitissimus habendi senatus locus, nihil horum? At nos hinc posthac, sitientis piros
Afros. Magna pars studiorum, prodita quaerimus. Integer legentibus erat a ante historiarum
dapibus. Praeterea iter est quasdam res quas ex communi. Ullamco laboris nisi ut aliquid ex ea
commodi consequat. Inmensae subtilitatis, obscuris et malesuada fames. Me non paenitet nullum
festiviorem excogitasse ad hoc. Cum ceteris in veneratione tui montes, nascetur mus. Etiam
habebis sem dicantur magna mollis euismod. Quis aute iure reprehenderit in voluptate velit esse.
Phasellus laoreet lorem vel dolor tempus vehicula. Ambitioni dedisse scripsisse iudicaretur.
Paullum deliquit, ponderibus modulisque suis ratio utitur. Ab illo tempore, ab est sed
immemorabili. Nec dubitamus multa iter quae et nos invenerat. Tu quoque, Brute, fili mi, nihil
timor populi, nihil! Morbi fringilla convallis sapien, id pulvinar odio volutpat. Cras mattis
iudicium purus sit amet fermentum. Vivamus sagittis lacus vel augue laoreet rutrum faucibus.
Quisque ut dolor gravida, placerat libero vel, euismod. Unam incolunt Belgae, aliam Aquitani,
tertiam. Cras mattis iudicium purus sit amet fermentum
    </div>
    <footer>
      <Toolbar
        after={
          <Button
            emphasis="low"
            onClick={[Function]}
            size="m"
            theme="light"
          >
            Close
          </Button>
        }
      />
    </footer>
  </Dialog>
</Fragment>
`;

exports[`<Dialog> Snapshots and structure should render story ScrollableDialog 1`] = `
<Fragment>
  <Button
    emphasis="high"
    onClick={[Function]}
    size="m"
    theme="light"
  >
    Open dialog
  </Button>
  <Dialog
    isOpen={true}
    onClose={[Function]}
    parentElement={
      Object {
        "current": undefined,
      }
    }
    size="regular"
  >
    <div
      className="lumx-spacing-padding"
    >
      

Nihil hic munitissimus habendi senatus locus, nihil horum? At nos hinc posthac, sitientis piros
Afros. Magna pars studiorum, prodita quaerimus. Integer legentibus erat a ante historiarum
dapibus. Praeterea iter est quasdam res quas ex communi. Ullamco laboris nisi ut aliquid ex ea
commodi consequat. Inmensae subtilitatis, obscuris et malesuada fames. Me non paenitet nullum
festiviorem excogitasse ad hoc. Cum ceteris in veneratione tui montes, nascetur mus. Etiam
habebis sem dicantur magna mollis euismod. Quis aute iure reprehenderit in voluptate velit esse.
Phasellus laoreet lorem vel dolor tempus vehicula. Ambitioni dedisse scripsisse iudicaretur.
Paullum deliquit, ponderibus modulisque suis ratio utitur. Ab illo tempore, ab est sed
immemorabili. Nec dubitamus multa iter quae et nos invenerat. Tu quoque, Brute, fili mi, nihil
timor populi, nihil! Morbi fringilla convallis sapien, id pulvinar odio volutpat. Cras mattis
iudicium purus sit amet fermentum. Vivamus sagittis lacus vel augue laoreet rutrum faucibus.
Quisque ut dolor gravida, placerat libero vel, euismod. Unam incolunt Belgae, aliam Aquitani,
tertiam. Cras mattis iudicium purus sit amet fermentum. Prima luce, cum quibus mons aliud
consensu ab eo. Vivamus sagittis lacus vel augue laoreet rutrum faucibus. Petierunt uti sibi
concilium totius Galliae in diem certam indicere. Etiam habebis sem dicantur magna mollis
euismod. A communi observantia non est recedendum. Ut enim ad minim veniam, quis nostrud
exercitation. Paullum deliquit, ponderibus modulisque suis ratio utitur. Hi omnes lingua,
institutis, legibus inter se differunt. Magna pars studiorum, prodita quaerimus. Quisque ut
dolor gravida, placerat libero vel, euismod. Tityre, tu patulae recubans sub tegmine fagi dolor.
Excepteur sint obcaecat cupiditat non proident culpa. Plura mihi bona sunt, inclinet, amari
petere vellent. Quae vero auctorem tractata ab fiducia dicuntur. Inmensae subtilitatis, obscuris
et malesuada fames. Quo usque tandem abutere, Catilina, patientia nostra? Nihilne te nocturnum
praesidium Palati, nihil urbis vigiliae. Curabitur blandit tempus ardua ridiculus sed magna. Tu
quoque, Brute, fili mi, nihil timor populi, nihil! Nihil hic munitissimus habendi senatus locus,
nihil horum?Tu quoque, Brute, fili mi, nihil timor populi, nihil! Tityre, tu patulae recubans
sub tegmine fagi dolor. Plura mihi bona sunt, inclinet, amari petere vellent. Ullamco laboris
nisi ut aliquid ex ea commodi consequat. Pellentesque habitant morbi tristique senectus et
netus. Salutantibus vitae elit libero, a pharetra augue. Lorem ipsum dolor sit amet, consectetur
adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Petierunt uti sibi
concilium totius Galliae in diem certam indicere. Contra legem facit qui id facit quod lex
prohibet. Integer legentibus erat a ante historiarum dapibus. Petierunt uti sibi concilium
totius Galliae in diem certam indicere. Ab illo tempore, ab est sed immemorabili. Nihil hic
munitissimus habendi senatus locus, nihil horum? Quisque ut dolor gravida, placerat libero vel,
euismod. Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut
labore et dolore magna aliqua. Nec dubitamus multa iter quae et nos invenerat. Quam temere in
vitiis, legem sancimus haerentia. Donec sed odio operae, eu vulputate felis rhoncus. Idque
Caesaris facere voluntate liceret: sese habere. Paullum deliquit, ponderibus modulisque suis
ratio utitur. Quae vero auctorem tractata ab fiducia dicuntur. Gallia est omnis divisa in partes
tres, quarum. Etiam habebis sem dicantur magna mollis euismod. Fabio vel iudice vincam, sunt in
culpa qui officia. Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor
incidunt ut labore et dolore magna aliqua. Tu quoque, Brute, fili mi, nihil timor populi, nihil!
Integer legentibus erat a ante historiarum dapibus. Tityre, tu patulae recubans sub tegmine fagi
dolor. Ullamco laboris nisi ut aliquid ex ea commodi consequat. Idque Caesaris facere voluntate
liceret: sese habere. Quid securi etiam tamquam eu fugiat nulla pariatur. Pellentesque habitant
morbi tristique senectus et netus. Ut enim ad minim veniam, quis nostrud exercitation. Petierunt
uti sibi concilium totius Galliae in diem certam indicere. Curabitur est gravida et libero vitae
dictum. Qui ipsorum lingua Celtae, nostra Galli appellantur. Quam temere in vitiis, legem
sancimus haerentia. Phasellus laoreet lorem vel dolor tempus vehicula. Ab illo tempore, ab est
sed immemorabili. Praeterea iter est quasdam res quas ex communi. Quo usque tandem abutere,
Catilina, patientia nostra? Non equidem invideo, miror magis posuere velit aliquet. Excepteur
sint obcaecat cupiditat non proident culpa. Curabitur blandit tempus ardua ridiculus sed magna.
Plura mihi bona sunt, inclinet, amari petere vellent. Quae vero auctorem tractata ab fiducia
dicuntur. Me non paenitet nullum festiviorem excogitasse ad hoc. Unam incolunt Belgae, aliam
Aquitani, tertiam.
    </div>
  </Dialog>
</Fragment>
`;

exports[`<Dialog> Snapshots and structure should render story ScrollableDialogWithHeaderAndFooter 1`] = `
<Fragment>
  <Button
    emphasis="high"
    onClick={[Function]}
    size="m"
    theme="light"
  >
    Open dialog
  </Button>
  <Dialog
    isOpen={true}
    onClose={[Function]}
    parentElement={
      Object {
        "current": undefined,
      }
    }
    size="big"
  >
    <header
      className="lumx-spacing-padding lumx-typography-title"
    >
      Dialog header
    </header>
    <div
      className="lumx-spacing-padding"
    >
      

Nihil hic munitissimus habendi senatus locus, nihil horum? At nos hinc posthac, sitientis piros
Afros. Magna pars studiorum, prodita quaerimus. Integer legentibus erat a ante historiarum
dapibus. Praeterea iter est quasdam res quas ex communi. Ullamco laboris nisi ut aliquid ex ea
commodi consequat. Inmensae subtilitatis, obscuris et malesuada fames. Me non paenitet nullum
festiviorem excogitasse ad hoc. Cum ceteris in veneratione tui montes, nascetur mus. Etiam
habebis sem dicantur magna mollis euismod. Quis aute iure reprehenderit in voluptate velit esse.
Phasellus laoreet lorem vel dolor tempus vehicula. Ambitioni dedisse scripsisse iudicaretur.
Paullum deliquit, ponderibus modulisque suis ratio utitur. Ab illo tempore, ab est sed
immemorabili. Nec dubitamus multa iter quae et nos invenerat. Tu quoque, Brute, fili mi, nihil
timor populi, nihil! Morbi fringilla convallis sapien, id pulvinar odio volutpat. Cras mattis
iudicium purus sit amet fermentum. Vivamus sagittis lacus vel augue laoreet rutrum faucibus.
Quisque ut dolor gravida, placerat libero vel, euismod. Unam incolunt Belgae, aliam Aquitani,
tertiam. Cras mattis iudicium purus sit amet fermentum. Prima luce, cum quibus mons aliud
consensu ab eo. Vivamus sagittis lacus vel augue laoreet rutrum faucibus. Petierunt uti sibi
concilium totius Galliae in diem certam indicere. Etiam habebis sem dicantur magna mollis
euismod. A communi observantia non est recedendum. Ut enim ad minim veniam, quis nostrud
exercitation. Paullum deliquit, ponderibus modulisque suis ratio utitur. Hi omnes lingua,
institutis, legibus inter se differunt. Magna pars studiorum, prodita quaerimus. Quisque ut
dolor gravida, placerat libero vel, euismod. Tityre, tu patulae recubans sub tegmine fagi dolor.
Excepteur sint obcaecat cupiditat non proident culpa. Plura mihi bona sunt, inclinet, amari
petere vellent. Quae vero auctorem tractata ab fiducia dicuntur. Inmensae subtilitatis, obscuris
et malesuada fames. Quo usque tandem abutere, Catilina, patientia nostra? Nihilne te nocturnum
praesidium Palati, nihil urbis vigiliae. Curabitur blandit tempus ardua ridiculus sed magna. Tu
quoque, Brute, fili mi, nihil timor populi, nihil! Nihil hic munitissimus habendi senatus locus,
nihil horum?Tu quoque, Brute, fili mi, nihil timor populi, nihil! Tityre, tu patulae recubans
sub tegmine fagi dolor. Plura mihi bona sunt, inclinet, amari petere vellent. Ullamco laboris
nisi ut aliquid ex ea commodi consequat. Pellentesque habitant morbi tristique senectus et
netus. Salutantibus vitae elit libero, a pharetra augue. Lorem ipsum dolor sit amet, consectetur
adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Petierunt uti sibi
concilium totius Galliae in diem certam indicere. Contra legem facit qui id facit quod lex
prohibet. Integer legentibus erat a ante historiarum dapibus. Petierunt uti sibi concilium
totius Galliae in diem certam indicere. Ab illo tempore, ab est sed immemorabili. Nihil hic
munitissimus habendi senatus locus, nihil horum? Quisque ut dolor gravida, placerat libero vel,
euismod. Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut
labore et dolore magna aliqua. Nec dubitamus multa iter quae et nos invenerat. Quam temere in
vitiis, legem sancimus haerentia. Donec sed odio operae, eu vulputate felis rhoncus. Idque
Caesaris facere voluntate liceret: sese habere. Paullum deliquit, ponderibus modulisque suis
ratio utitur. Quae vero auctorem tractata ab fiducia dicuntur. Gallia est omnis divisa in partes
tres, quarum. Etiam habebis sem dicantur magna mollis euismod. Fabio vel iudice vincam, sunt in
culpa qui officia. Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor
incidunt ut labore et dolore magna aliqua. Tu quoque, Brute, fili mi, nihil timor populi, nihil!
Integer legentibus erat a ante historiarum dapibus. Tityre, tu patulae recubans sub tegmine fagi
dolor. Ullamco laboris nisi ut aliquid ex ea commodi consequat. Idque Caesaris facere voluntate
liceret: sese habere. Quid securi etiam tamquam eu fugiat nulla pariatur. Pellentesque habitant
morbi tristique senectus et netus. Ut enim ad minim veniam, quis nostrud exercitation. Petierunt
uti sibi concilium totius Galliae in diem certam indicere. Curabitur est gravida et libero vitae
dictum. Qui ipsorum lingua Celtae, nostra Galli appellantur. Quam temere in vitiis, legem
sancimus haerentia. Phasellus laoreet lorem vel dolor tempus vehicula. Ab illo tempore, ab est
sed immemorabili. Praeterea iter est quasdam res quas ex communi. Quo usque tandem abutere,
Catilina, patientia nostra? Non equidem invideo, miror magis posuere velit aliquet. Excepteur
sint obcaecat cupiditat non proident culpa. Curabitur blandit tempus ardua ridiculus sed magna.
Plura mihi bona sunt, inclinet, amari petere vellent. Quae vero auctorem tractata ab fiducia
dicuntur. Me non paenitet nullum festiviorem excogitasse ad hoc. Unam incolunt Belgae, aliam
Aquitani, tertiam.
    </div>
    <footer
      className="lumx-spacing-padding"
    >
      Dialog footer
    </footer>
  </Dialog>
</Fragment>
`;

exports[`<Dialog> Snapshots and structure should render story SimpleDialog 1`] = `
<Fragment>
  <Button
    emphasis="high"
    onClick={[Function]}
    size="m"
    theme="light"
  >
    Open dialog
  </Button>
  <Dialog
    isOpen={true}
    onClose={[Function]}
    parentElement={
      Object {
        "current": undefined,
      }
    }
    size="big"
  >
    <div
      className="lumx-spacing-padding"
    >
      
Nihil hic munitissimus habendi senatus locus, nihil horum? At nos hinc posthac, sitientis piros
Afros. Magna pars studiorum, prodita quaerimus. Integer legentibus erat a ante historiarum
dapibus. Praeterea iter est quasdam res quas ex communi. Ullamco laboris nisi ut aliquid ex ea
commodi consequat. Inmensae subtilitatis, obscuris et malesuada fames. Me non paenitet nullum
festiviorem excogitasse ad hoc. Cum ceteris in veneratione tui montes, nascetur mus. Etiam
habebis sem dicantur magna mollis euismod. Quis aute iure reprehenderit in voluptate velit esse.
Phasellus laoreet lorem vel dolor tempus vehicula. Ambitioni dedisse scripsisse iudicaretur.
Paullum deliquit, ponderibus modulisque suis ratio utitur. Ab illo tempore, ab est sed
immemorabili. Nec dubitamus multa iter quae et nos invenerat. Tu quoque, Brute, fili mi, nihil
timor populi, nihil! Morbi fringilla convallis sapien, id pulvinar odio volutpat. Cras mattis
iudicium purus sit amet fermentum. Vivamus sagittis lacus vel augue laoreet rutrum faucibus.
Quisque ut dolor gravida, placerat libero vel, euismod. Unam incolunt Belgae, aliam Aquitani,
tertiam. Cras mattis iudicium purus sit amet fermentum
    </div>
  </Dialog>
</Fragment>
`;

exports[`<Dialog> Snapshots and structure should render story Sizes 1`] = `
<Fragment>
  <Button
    emphasis="high"
    onClick={[Function]}
    size="m"
    theme="light"
  >
    Open dialog
  </Button>
  Use the knobs to change the dialog size!
  <Dialog
    isOpen={true}
    onClose={[Function]}
    parentElement={
      Object {
        "current": undefined,
      }
    }
    size="tiny"
  >
    <div
      className="lumx-spacing-padding"
    >
      

Nihil hic munitissimus habendi senatus locus, nihil horum? At nos hinc posthac, sitientis piros
Afros. Magna pars studiorum, prodita quaerimus. Integer legentibus erat a ante historiarum
dapibus. Praeterea iter est quasdam res quas ex communi. Ullamco laboris nisi ut aliquid ex ea
commodi consequat. Inmensae subtilitatis, obscuris et malesuada fames. Me non paenitet nullum
festiviorem excogitasse ad hoc. Cum ceteris in veneratione tui montes, nascetur mus. Etiam
habebis sem dicantur magna mollis euismod. Quis aute iure reprehenderit in voluptate velit esse.
Phasellus laoreet lorem vel dolor tempus vehicula. Ambitioni dedisse scripsisse iudicaretur.
Paullum deliquit, ponderibus modulisque suis ratio utitur. Ab illo tempore, ab est sed
immemorabili. Nec dubitamus multa iter quae et nos invenerat. Tu quoque, Brute, fili mi, nihil
timor populi, nihil! Morbi fringilla convallis sapien, id pulvinar odio volutpat. Cras mattis
iudicium purus sit amet fermentum. Vivamus sagittis lacus vel augue laoreet rutrum faucibus.
Quisque ut dolor gravida, placerat libero vel, euismod. Unam incolunt Belgae, aliam Aquitani,
tertiam. Cras mattis iudicium purus sit amet fermentum. Prima luce, cum quibus mons aliud
consensu ab eo. Vivamus sagittis lacus vel augue laoreet rutrum faucibus. Petierunt uti sibi
concilium totius Galliae in diem certam indicere. Etiam habebis sem dicantur magna mollis
euismod. A communi observantia non est recedendum. Ut enim ad minim veniam, quis nostrud
exercitation. Paullum deliquit, ponderibus modulisque suis ratio utitur. Hi omnes lingua,
institutis, legibus inter se differunt. Magna pars studiorum, prodita quaerimus. Quisque ut
dolor gravida, placerat libero vel, euismod. Tityre, tu patulae recubans sub tegmine fagi dolor.
Excepteur sint obcaecat cupiditat non proident culpa. Plura mihi bona sunt, inclinet, amari
petere vellent. Quae vero auctorem tractata ab fiducia dicuntur. Inmensae subtilitatis, obscuris
et malesuada fames. Quo usque tandem abutere, Catilina, patientia nostra? Nihilne te nocturnum
praesidium Palati, nihil urbis vigiliae. Curabitur blandit tempus ardua ridiculus sed magna. Tu
quoque, Brute, fili mi, nihil timor populi, nihil! Nihil hic munitissimus habendi senatus locus,
nihil horum?Tu quoque, Brute, fili mi, nihil timor populi, nihil! Tityre, tu patulae recubans
sub tegmine fagi dolor. Plura mihi bona sunt, inclinet, amari petere vellent. Ullamco laboris
nisi ut aliquid ex ea commodi consequat. Pellentesque habitant morbi tristique senectus et
netus. Salutantibus vitae elit libero, a pharetra augue. Lorem ipsum dolor sit amet, consectetur
adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Petierunt uti sibi
concilium totius Galliae in diem certam indicere. Contra legem facit qui id facit quod lex
prohibet. Integer legentibus erat a ante historiarum dapibus. Petierunt uti sibi concilium
totius Galliae in diem certam indicere. Ab illo tempore, ab est sed immemorabili. Nihil hic
munitissimus habendi senatus locus, nihil horum? Quisque ut dolor gravida, placerat libero vel,
euismod. Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut
labore et dolore magna aliqua. Nec dubitamus multa iter quae et nos invenerat. Quam temere in
vitiis, legem sancimus haerentia. Donec sed odio operae, eu vulputate felis rhoncus. Idque
Caesaris facere voluntate liceret: sese habere. Paullum deliquit, ponderibus modulisque suis
ratio utitur. Quae vero auctorem tractata ab fiducia dicuntur. Gallia est omnis divisa in partes
tres, quarum. Etiam habebis sem dicantur magna mollis euismod. Fabio vel iudice vincam, sunt in
culpa qui officia. Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor
incidunt ut labore et dolore magna aliqua. Tu quoque, Brute, fili mi, nihil timor populi, nihil!
Integer legentibus erat a ante historiarum dapibus. Tityre, tu patulae recubans sub tegmine fagi
dolor. Ullamco laboris nisi ut aliquid ex ea commodi consequat. Idque Caesaris facere voluntate
liceret: sese habere. Quid securi etiam tamquam eu fugiat nulla pariatur. Pellentesque habitant
morbi tristique senectus et netus. Ut enim ad minim veniam, quis nostrud exercitation. Petierunt
uti sibi concilium totius Galliae in diem certam indicere. Curabitur est gravida et libero vitae
dictum. Qui ipsorum lingua Celtae, nostra Galli appellantur. Quam temere in vitiis, legem
sancimus haerentia. Phasellus laoreet lorem vel dolor tempus vehicula. Ab illo tempore, ab est
sed immemorabili. Praeterea iter est quasdam res quas ex communi. Quo usque tandem abutere,
Catilina, patientia nostra? Non equidem invideo, miror magis posuere velit aliquet. Excepteur
sint obcaecat cupiditat non proident culpa. Curabitur blandit tempus ardua ridiculus sed magna.
Plura mihi bona sunt, inclinet, amari petere vellent. Quae vero auctorem tractata ab fiducia
dicuntur. Me non paenitet nullum festiviorem excogitasse ad hoc. Unam incolunt Belgae, aliam
Aquitani, tertiam.
    </div>
  </Dialog>
</Fragment>
`;

exports[`<Dialog> Snapshots and structure should render story WithAnimationCallbacks 1`] = `
<Fragment>
  <Button
    emphasis="high"
    onClick={[Function]}
    size="m"
    theme="light"
  >
    Open dialog
  </Button>
  <Dialog
    isOpen={true}
    onClose={[Function]}
    onVisibilityChange={[Function]}
    parentElement={
      Object {
        "current": undefined,
      }
    }
    size="regular"
  >
    <div
      className="lumx-spacing-padding"
    >
      
Nihil hic munitissimus habendi senatus locus, nihil horum? At nos hinc posthac, sitientis piros
Afros. Magna pars studiorum, prodita quaerimus. Integer legentibus erat a ante historiarum
dapibus. Praeterea iter est quasdam res quas ex communi. Ullamco laboris nisi ut aliquid ex ea
commodi consequat. Inmensae subtilitatis, obscuris et malesuada fames. Me non paenitet nullum
festiviorem excogitasse ad hoc. Cum ceteris in veneratione tui montes, nascetur mus. Etiam
habebis sem dicantur magna mollis euismod. Quis aute iure reprehenderit in voluptate velit esse.
Phasellus laoreet lorem vel dolor tempus vehicula. Ambitioni dedisse scripsisse iudicaretur.
Paullum deliquit, ponderibus modulisque suis ratio utitur. Ab illo tempore, ab est sed
immemorabili. Nec dubitamus multa iter quae et nos invenerat. Tu quoque, Brute, fili mi, nihil
timor populi, nihil! Morbi fringilla convallis sapien, id pulvinar odio volutpat. Cras mattis
iudicium purus sit amet fermentum. Vivamus sagittis lacus vel augue laoreet rutrum faucibus.
Quisque ut dolor gravida, placerat libero vel, euismod. Unam incolunt Belgae, aliam Aquitani,
tertiam. Cras mattis iudicium purus sit amet fermentum
    </div>
  </Dialog>
</Fragment>
`;
